--- a/Kontakt.html
+++ b/Kontakt.html
@@ -4,7 +4,7 @@
   <head>
     <title>Pendix</title>
     <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div id="top">
