--- a/Projekt Webseite.html
+++ b/Projekt Webseite.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 
-<html>
+<html lang="de" dir="ltr">
   <head>
     <title>Pendix</title>
     <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div id="top">
@@ -15,7 +15,7 @@
       <a href="Motoren.html">Motoren</a>
       <a href="Service.html">Services</a>
       <a href="Kontakt.html">Kontakt</a>
-      <a href="&Uuml;ber uns.html">&Uuml;ber uns</a>
+      <a href="Über uns.html">Über uns</a>
 </div>
 </div>
 <div id="main">
