FrontPicture hinzugefügt in Produkt.html und styles.css (als class)

--- a/Produkt.html
+++ b/Produkt.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
 <div id="top">
   <div id="logo">Pendix</div>
@@ -22,7 +23,7 @@
 </div>
 </div>
 <div id="main">
-      <h1>Produkte</h1>
+      <h1 class="FrontPicture">Unsere Produkte</h1>
       <p>Hier sind unsere Produkte:<br>
       Fahrrad 1<br>
       Fahrrad 2</p>
