--- a/Projekt Webseite.html
+++ b/Projekt Webseite.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html5>
 
 <html lang="de" dir="ltr">
   <head>
@@ -6,43 +6,118 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
-<div id="top">
-  <div id="logo">Pendix</div>
-  <div id="logo-name">Pendix E-Bikes</div>
-  <div id="navigation">
-      <a href="Produkt.html">Produkte</a>
-      <a href="Motoren.html">Motoren</a>
-      <a href="Service.html">Services</a>
-      <a href="Kontakt.html">Kontakt</a>
-      <a href="Über uns.html">Über uns</a>
-</div>
-</div>
-<div id="main">
-      <section id="products">
-         <h2>Produkte</h2>
-         <p>Moin wie gehts euch so????</p>
-      </section>
-      <section id="engines">
-         <h2>Motoren</h2>
-         <p></p>
-      </section>
-      <section id="services">
-         <h2>Services</h2>
-         <p></p>
-      </section>
-      <section id="contact">
-         <h2>Kontakt</h2>
-         <p></p>
-      </section>
-      <section id="about-us">
-      <h2>&Uuml;ber uns</h2>
-         <p></p>
-      </section>
-</div>
-<div id="footer">
-  Copyright 2020 Pendix E-Bikes
-</div>
+
+  <div class="wrapper">
+
+
+<header> <!--Im Header ist die Navigationsleiste untergebracht-->
+
+    <div class="navigation">
+        <ul>
+            <li class="nav"><a href="index.html"> <img class="logo_klein" src="logo1.png" alt="Das ist unser Logo"> </a> </li>
+            <li class="nav"><a href="Produkt.html">Produkte</a></li>
+            <li class="nav"><a href="Service.html">Services</a></li>
+            <li class="nav"><a href="Kontakt.html">Kontakt</a></li>
+            <li class="nav"><a href="Über uns.html">Über uns</a></li>
+        </ul>
+    </div>
+
+</header> <!--Abschluss des Headerbereichs und der Navigationsleiste-->
+
+
+<main> <!--Hier beginnt der Mainteil der Website-->
+
+  <div id="main">
+    <div class="Titelbild">
+      <img src="logo1.png" alt="Titelbild der Website">
+    </div>
+  </div>
+
+  <p>Mit unserem Produkt ermöglichen wir Ihnen ganz einfach Ihr aktuelles Fahrrad in ein E-Bike zu verwandeln. Das funktioniert schnell und ist für jeden in ein paar Handgriffen machbar.</p>
+
+  <p>Werden Sie ein Teil der Mobilität von morgen und rüsten Sie noch heute Ihr geliebtes Fahrrad mit einem Elektroantrieb aus.</p>
+
+  <div class="benefits">
+      <div class="environment">
+        <div class="environment_pic">
+            <img src="" alt="">
+        </div>
+        <div class="environment_text">
+          <h1>Die Umwelt geht uns alle etwas an</h1>
+          <p>Uns ist der Umweltschutz sehr wichtig. Aus diesem Grund werden in unserem Produkt bis zu 70 Prozent recycelte Materialien verwendet. Zudem achten wir auf kurze Lieferwege. Das ist unser Beitrag für ein nachhaltiges Morgen.</p>
+        </div>
+      </div> <!--environment ende-->
+
+      <div class="montage">
+          <div class="montage_pic">
+              <img src="" alt="">
+          </div>
+          <div class="montage_text">
+              <h1>Das schaffen Sie mit links!</h1>
+              <p>Unsere Produkte sind einfach an dem Großteil der handelsüblichen Fahrräder zu montieren. Mit der beiliegenden Montageanleitung können Sie im Handumdrehen und innerhalb kürzester Zeit ihr Fahrrad mit einem Elektroantrieb ausstatten.</p>
+          </div>
+      </div> <!--Montage Ende-->
+
+      <div class="worldwide">
+          <div class="worldwide_pic">
+              <img src="" alt="">
+          </div>
+          <div class="worldwide_text">
+              <h1>Worlwide und doch direkt vor Ihrer Haustüre</h1>
+              <p>Unsere Produkte sind weltweit verfügbar. Wir möchten nämlich, dass die ganze Welt von unseren Produkten profitieren. Durch Produktionsstätten auf der ganzen Welt bleiben die Lieferwege trotzdem kurz.</p>
+          </div>
+      </div> <!--worldwide Ende-->
+
+      <div class="employees">
+          <div class="employees_pic">
+              <img src="" alt="">
+          </div>
+          <div class="employees_text">
+              <h1>Unsere Mitarbeiter sind mit Herzblut dabei</h1>
+              <p>... und aus diesem Grund entlohnen wir sie mit fairen Arbeitsbedingungen. Wir können stolz behaupten, dass seit der Gründung von %%%%FIRMENNAME%%% bereits über 100 Familien von den Einnahmen unserer Mitarbeiter leben können.</p>
+          </div>
+      </div> <!--employees Ende-->
+
+    </div> <!--Benefits Ende-->
+
+    <div class="productbutton">
+        <button onclick="location.href='https://www.google.de'" type="button" name="button"> <p>Zu unseren Produkten</p> </button>
+        <!-- der onclick Befehl ist ein JavaScript Befehl-->
+    </div> <!--Hier endet der Benefits Bereich-->
+</main> <!--Hier endet der Main Bereich-->
+
+<footer> <!--Hier beginnt der Footer Bereich-->
+
+  <div class="footerpicture">
+    <p>Hier kann noch ein Bild hinterlegt werden</p>
+  </div>
+
+  <div class="footer_content">
+    <div class="footer_contact">
+      <p>Hallo ich bin Max</p>
+    </div>
+    <div class="footer_socialmedia">
+      <p>Hier sollen die Social Media Logos hinterlegt werden.</p>
+    </div>
+    <div class="footer_contact">
+      <p>Hier kommen die Kontaktdaten</p>
+    </div>
+  </div>
+
+  <div id="copyright">
+        <p>Copyright 2020 Pendix E-Bikes</p>
+  </div>
+
+</footer> <!--Hier endet der Footer Bereich-->
+
+
+
+  </div>
+
+
+
 </body>
 
 <body text="#000000" bgcolor="#FFFFFF" link="#FF0000" alink="#FF0000" vlink="#FF0000">
