Alle Seiten auf ein Layout gebracht. Style.css aktualisiert Bilder hochgeladen

--- a/Produkt.html
+++ b/Produkt.html
@@ -1,38 +1,72 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html5>
 
-<html>
-  <head>
+<html lang="de" dir="ltr">
+<head>
     <title>Pendix</title>
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 </head>
+
 <body>
-<div id="top">
-  <div id="logo">Pendix</div>
-  <div id="logo-name">Pendix E-Bikes</div>
-  <div id="navigation">
-      <a href="Produkt.html">Produkte</a>
-      <a href="Motoren.html">Motoren</a>
-      <a href="Service.html">Services</a>
-      <a href="Kontakt.html">Kontakt</a>
-      <a href="&Uuml;ber uns.html">&Uuml;ber uns</a>
-</div>
-  <div id="image">
-      <img src="image.jpg" alt="Pendix E-Bikes Bild">
-</div>
-</div>
-<div id="main">
-      <h1>Produkte</h1>
-      <p>Hier sind unsere Produkte:<br>
-      Fahrrad 1<br>
-      Fahrrad 2</p>
-</div>
-<div id="footer">
-  Copyright 2020 Pendix E-Bikes
-</div>
+
+  <div class="wrapper">
+
+
+<header> <!--Im Header ist die Navigationsleiste untergebracht-->
+
+    <div class="navigation">
+        <ul>
+            <li class="nav"><a href="index.html"> <img class="logo_klein" src="logo1.png" alt="Das ist unser Logo"> </a> </li>
+            <li class="nav"><a href="Produkt.html">Produkte</a></li>
+            <li class="nav"><a href="Service.html">Services</a></li>
+            <li class="nav"><a href="Kontakt.html">Kontakt</a></li>
+            <li class="nav"><a href="Über uns.html">Über uns</a></li>
+        </ul>
+    </div>
+
+</header> <!--Abschluss des Headerbereichs und der Navigationsleiste-->
+
+
+<main> <!--Hier beginnt der Mainteil der Website-->
+
+  <div id="main">
+    <h1>Das ist eine leere Seite, die mit Leben gefüllt werden will</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  </div>
+
+
+</main> <!--Hier endet der Main Bereich-->
+
+<footer> <!--Hier beginnt der Footer Bereich-->
+
+  <div class="footerpicture">
+    <p>Hier kann noch ein Bild hinterlegt werden</p>
+  </div>
+
+  <div class="footer_content">
+    <div class="footer_contact">
+      <p>Hallo ich bin Max</p>
+    </div>
+    <div class="footer_socialmedia">
+      <p>Hier sollen die Social Media Logos hinterlegt werden.</p>
+    </div>
+    <div class="footer_contact">
+      <p>Hier kommen die Kontaktdaten hin</p>
+    </div>
+  </div>
+
+  <div id="copyright">
+        <p>Copyright 2020 Pendix E-Bikes</p>
+  </div>
+
+</footer> <!--Hier endet der Footer Bereich-->
+
+
+
+  </div>
+
+
+
 </body>
 
-<body text="#000000" bgcolor="#FFFFFF" link="#FF0000" alink="#FF0000" vlink="#FF0000">
-
-</body>
 </html>
