--- a/Projekt Webseite.html
+++ b/Projekt Webseite.html
@@ -102,7 +102,7 @@
       <p>Hier sollen die Social Media Logos hinterlegt werden.</p>
     </div>
     <div class="footer_contact">
-      <p>Hier kommen die Kontaktdaten</p>
+      <p>Hier kommen die Kontaktdaten hin</p>
     </div>
   </div>
 
@@ -120,7 +120,4 @@
 
 </body>
 
-<body text="#000000" bgcolor="#FFFFFF" link="#FF0000" alink="#FF0000" vlink="#FF0000">
-
-</body>
 </html>
