--- a/Produkt.html
+++ b/Produkt.html
@@ -30,11 +30,53 @@
 <main> <!--Hier beginnt der Mainteil der Website-->
 
   <div id="main">
-    <h1>Das ist eine leere Seite, die mit Leben gefüllt werden will</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <!-- Das große Bild am Anfang der Seite -->
+  	<div class="FrontPicture-Produktseite">
+  			<div class="FrontPicture-Text-Produktseite">
+  				<h1> Unsere Produkte </h1>
+  				<p> sooo ein geiles Produkt </p>
+  			</div>
+  	</div>
+
+    <!-- der grüne Block mit Standard -->
+    <h2 class="separator">Standard Variante</h2>
+
+    <!-- 2 columns Produktinfos mit links Bild rechts Text -->
+  	<div class="container-1">
+    	<div class="row">
+      	<div class="column-50">
+  					<img src="Fahrradbild_schlechte_Auflösung.png" alt="Fahrradbild" width="350" height="500">
+      	</div>
+      	<div class="column-50">
+        	<h1> Technische Daten </h1>
+  					<p> hier soll die Tabelle hin </p>
+  						<button class="button" style?="background-color:blue">Read more</button>
+      	</div>
+    	</div>
+  	</div>
   </div>
 
+    <!-- 2 columns Produktinfos mit rechts Bild links Text -->
+    <div class="container-2">
+      <div class="row">
+        <div class="column-50">
+        	<h1> Das Komplettpaket </h1>
+  				<p> Infos zum Paket </p>
+  						<button class="button" style?="background-color:blue">Read more</button>
+  		</div>
+  		  <div class="column-50">
+  				<img src="#Bild vom Paket" alt="Hier sollen Produktbilder hin" width="350" height="500">
+  			</div>
+      </div>
+    </div>
 
+
+    <!-- hier endet Bikestail  -->
+
+    <!-- der grüne Block mit Premium-->
+    <h2 class="separator">Premium Variante</h2>
+    
 </main> <!--Hier endet der Main Bereich-->
 
 <footer> <!--Hier beginnt der Footer Bereich-->
