--- a/Projekt Webseite.html
+++ b/Projekt Webseite.html
@@ -30,63 +30,93 @@
 <main> <!--Hier beginnt der Mainteil der Website-->
 
   <div id="main">
-    <div class="Titelbild">
-      <img src="logo1.png" alt="Titelbild der Website" width=100%>
+
+    <!-- Das große Bild am Anfang der Seite -->
+  	<div class="FrontPicture-Startseite">
+  			<div class="FrontPicture-Text-Startseite">
+  				<h1> Wir sind Bikepower </h1>
+  				<p> Werden Sie ein Teil der Mobilität von morgen und rüsten Sie noch heute Ihr geliebtes Fahrrad
+             mit einem Elektroantrieb aus! Mit unserem Produkt ermöglichen wir Ihnen ganz einfach Ihr aktuelles Fahrrad in ein
+             E-Bike zu verwandeln. Das funktioniert schnell und ist für jeden in ein paar Handgriffen machbar. </p>
+  			</div>
+  	</div>
+
+    <!-- der Trennstreifen -->
+    <h2 class="separator"> Unsere Benefits</h2>
+
+    <!-- 2 Spalten Container mit links Bild rechts Text -->
+  	<div class="container-1">
+    	<div class="row">
+      	<div class="column-50">
+  					<img src="Montur.svg" alt="Monturpiktogramm" width="350" height="500">
+      	</div>
+      	<div class="column-50">
+        	<h1> Das schaffen Sie mit links! </h1>
+  					<p>Unsere Produkte sind einfach an dem Großteil der handelsüblichen Fahrräder zu montieren.
+              Mit der beiliegenden Montageanleitung können Sie im Handumdrehen und innerhalb kürzester Zeit
+              ihr Fahrrad mit einem Elektroantrieb ausstatten. </p>
+      	</div>
+    	</div>
+  	</div>
+
+    <!-- 2 Spalten Container mit rechts Bild links Text -->
+    <div class="container-2">
+      <div class="row">
+        <div class="column-50">
+        	<h1> Worlwide und doch direkt vor Ihrer Haustüre </h1>
+  				<p> Unsere Produkte sind weltweit verfügbar. Wir möchten nämlich, dass die ganze Welt von unseren
+            Produkten profitieren. Durch Produktionsstätten auf der ganzen Welt bleiben die Lieferwege trotzdem kurz. </p>
+  						<button class="button" style?="background-color:blue">Read more</button>
+  		</div>
+  		  <div class="column-50">
+  				<img src="worldwide.svg" alt="Weltsymbol" width="350" height="500">
+  			</div>
+      </div>
     </div>
+
+    <!-- 2 Spalten Container mit links Bild rechts Text -->
+  	<div class="container-1">
+    	<div class="row">
+      	<div class="column-50">
+  					<img src="mitarbeiter.svg" alt="Mitarbeiterpiktogramm" width="350" height="500">
+      	</div>
+      	<div class="column-50">
+        	<h1> Unsere Mitarbeiter sind mit Herzblut dabei </h1>
+  					<p> ... und aus diesem Grund entlohnen wir sie mit fairen Arbeitsbedingungen. Wir können
+              stolz behaupten, dass seit der Gründung von %%%%FIRMENNAME%%% bereits über 100 Familien
+              von den Einnahmen unserer Mitarbeiter leben können. </p>
+      	</div>
+    	</div>
+  	</div>
+
+    <!-- 2 Spalten Container mit rechts Bild links Text -->
+    <div class="container-2">
+      <div class="row">
+        <div class="column-50">
+        	<h1> Die Umwelt geht uns alle etwas an </h1>
+  				<p> Uns ist der Umweltschutz sehr wichtig. Aus diesem Grund werden in unserem Produkt bis zu
+            70 Prozent recycelte Materialien verwendet. Zudem achten wir auf kurze Lieferwege. Das ist
+            unser Beitrag für ein nachhaltiges Morgen. </p>
+  						<button class="button" style?="background-color:blue">Read more</button>
+  		</div>
+  		  <div class="column-50">
+  				<img src="Nachhaltigkeit.svg" alt="Nachhaltigkeitssymbol" width="350" height="500">
+  			</div>
+      </div>
+    </div>
+
   </div>
 
-  <p>Mit unserem Produkt ermöglichen wir Ihnen ganz einfach Ihr aktuelles Fahrrad in ein E-Bike zu verwandeln. Das funktioniert schnell und ist für jeden in ein paar Handgriffen machbar.</p>
+<!-- Ende der Benefits -->
 
-  <p>Werden Sie ein Teil der Mobilität von morgen und rüsten Sie noch heute Ihr geliebtes Fahrrad mit einem Elektroantrieb aus.</p>
 
-  <div class="benefits">
-      <div class="environment">
-        <div class="environment_pic">
-            <img class="logo_home" src="Nachhaltigkeit.svg" alt="">
-        </div>
-        <div class="environment_text">
-          <h1>Die Umwelt geht uns alle etwas an</h1>
-          <p>Uns ist der Umweltschutz sehr wichtig. Aus diesem Grund werden in unserem Produkt bis zu 70 Prozent recycelte Materialien verwendet. Zudem achten wir auf kurze Lieferwege. Das ist unser Beitrag für ein nachhaltiges Morgen.</p>
-        </div>
-      </div> <!--environment ende-->
-
-      <div class="montage">
-          <div class="montage_pic">
-              <img class="logo_home" src="Montur.svg" alt="">
-          </div>
-          <div class="montage_text">
-              <h1>Das schaffen Sie mit links!</h1>
-              <p>Unsere Produkte sind einfach an dem Großteil der handelsüblichen Fahrräder zu montieren. Mit der beiliegenden Montageanleitung können Sie im Handumdrehen und innerhalb kürzester Zeit ihr Fahrrad mit einem Elektroantrieb ausstatten.</p>
-          </div>
-      </div> <!--Montage Ende-->
-
-      <div class="worldwide">
-          <div class="worldwide_pic">
-              <img class="logo_home" src="worldwide.svg" alt="">
-          </div>
-          <div class="worldwide_text">
-              <h1>Worlwide und doch direkt vor Ihrer Haustüre</h1>
-              <p>Unsere Produkte sind weltweit verfügbar. Wir möchten nämlich, dass die ganze Welt von unseren Produkten profitieren. Durch Produktionsstätten auf der ganzen Welt bleiben die Lieferwege trotzdem kurz.</p>
-          </div>
-      </div> <!--worldwide Ende-->
-
-      <div class="employees">
-          <div class="employees_pic">
-              <img class="logo_home" src="mitarbeiter.svg" alt="">
-          </div>
-          <div class="employees_text">
-              <h1>Unsere Mitarbeiter sind mit Herzblut dabei</h1>
-              <p>... und aus diesem Grund entlohnen wir sie mit fairen Arbeitsbedingungen. Wir können stolz behaupten, dass seit der Gründung von %%%%FIRMENNAME%%% bereits über 100 Familien von den Einnahmen unserer Mitarbeiter leben können.</p>
-          </div>
-      </div> <!--employees Ende-->
-
-    </div> <!--Benefits Ende-->
 
     <div class="productbutton">
         <button onclick="location.href='https://www.google.de'" type="button" name="button"> <p>Zu unseren Produkten</p> </button>
         <!-- der onclick Befehl ist ein JavaScript Befehl-->
     </div> <!--Hier endet der Benefits Bereich-->
 </main> <!--Hier endet der Main Bereich-->
+
 
 <footer> <!--Hier beginnt der Footer Bereich-->
 
